--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
     system-ui,
     -apple-system,
     sans-serif;
-  background-color: var(--color-bg);
+  background: linear-gradient(64deg, var(--color-bg), #3e3e3e);
   color: var(--color-text);
   min-height: 100vh;
   display: flex;
