--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 .controls__file-input:hover {
-  background-color: #9333ea;
+  background-color: #22c55e;
 }
 
 .controls__file-input input[type='file'] {
